# ChangeLog for media-libs/libpano13
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libpano13/ChangeLog,v 1.8 2009/04/20 20:59:25 maekke Exp $

  20 Apr 2009; Markus Meier <maekke@gentoo.org> libpano13-2.9.12,
  libpano13-2.9.14_beta1, libpano13-2.9.14_beta2:
  remove media-libs/libpano12 references (removed from the tree)

*libpano13-2.9.14_beta2 (07 Mar 2009)

  07 Mar 2009; Markus Meier <maekke@gentoo.org>
  +libpano13-2.9.14_beta2.ebuild:
  version bump

*libpano13-2.9.14_beta1 (27 Feb 2009)

  27 Feb 2009; Markus Meier <maekke@gentoo.org>
  +libpano13-2.9.14_beta1.ebuild:
  version bump

  23 Jan 2009; Brent Baude <ranger@gentoo.org> ChangeLog:
  stable ppc, bug 246827

  13 Jan 2009; Brent Baude <ranger@gentoo.org> libpano13-2.9.12.ebuild:
  stable ppc, bug 246827

  02 Dec 2008; <chainsaw@gentoo.org> libpano13-2.9.12.ebuild:
  Add ~ppc keyword based on PowerBook6,7 testing by Christian "papillon81"
  Schmitt <chrschmitt@gmail.com>. Dependency for media-gfx/hugin, bug
  #234909.

  22 Nov 2008; Markus Meier <maekke@gentoo.org> libpano13-2.9.12.ebuild:
  amd64/x86 stable, bug #246827

*libpano13-2.9.12 (16 Aug 2008)

  16 Aug 2008; Markus Meier <maekke@gentoo.org> +metadata.xml,
  +libpano13-2.9.12.ebuild:
  initial import of libpano13
