@@ -1,6 +1,8 @@
 DIST libpano13-2.9.12.tar.gz 3617850 RMD160 04f491e17c09d86bf99dc1b03810a31bae965527 SHA1 6848d4c127b77fd59a1787806e36d24a9403fc59 SHA256 2ab248c0681d05e9f02ddbe5e89d3fa398fff3b5fd02f01e640c97be02c99f2a
 DIST libpano13-2.9.14_beta2.tar.gz 2500285 RMD160 049f615cec603dcecc0f7e82fdb5668341e47162 SHA1 e46a185ca139406fa10764fcfdeef529f248475a SHA256 acfcb6c6f8dc9403332899ded7e63e2ea3a5881537cc001ae88be2d119e13376
+DIST libpano13-2.9.14_rc1.tar.gz 2501559 RMD160 bc49c85e8ab11eaeb48898fcf3b9e4ac75c121c4 SHA1 c6e74acdda64ce7d41abe7d95f291dc59de751a5 SHA256 57949787a886de7d7198f4de1b6213e6b7a3099e7099fbf18950e9ab9fe2eeef
 EBUILD libpano13-2.9.12.ebuild 896 RMD160 1e23a8ceb840ffea47b077ffbe5989c7dd4cfa33 SHA1 d7d9635dae125f1dddf10c1f0d49a32beb8be26d SHA256 0b5ac52db025b4278537d8662900da071dd20f7e5cf7de9c3b9dd551cda5c6d5
 EBUILD libpano13-2.9.14_beta2.ebuild 888 RMD160 e875d37eac787ec2110e66fab0a8e64fb7eff194 SHA1 c18432a9581e58fb4abb9e586fb0d67d7cbb4cda SHA256 c24332dfc0b7493389230a39acda67034c26083864eb0a4569690f65ce1a6cbc
-MISC ChangeLog 1331 RMD160 8f4fafdb8980fc20ec7adaef3495cdf593c45f79 SHA1 6250355b721f843df8834740c88204b0dac638af SHA256 02565ea4b366771c7e5142ca68d8a104e3efc01df9d5647b55cb3262f54d3da4
+EBUILD libpano13-2.9.14_rc1.ebuild 901 RMD160 693059482a975fcf135b820192e2181798ca830f SHA1 317175154a3d40ea6bc6a54e67bc4feaee341862 SHA256 0d74f85e2b2628363242e98432c818d294dba7390fdaa779ba2bda9b1930cd5b
+MISC ChangeLog 1464 RMD160 d1d430bf9a17214403d08b0a43b99f9a72eab2b7 SHA1 46dd57d00f2a38ed6b34cebc958a300b13bcb98d SHA256 d4b609d1462500f258ce042bda068f50b05bfbd557e86a799500b8a0d110898e
 MISC metadata.xml 162 RMD160 724f25e8bd2d17056a9f820449e0ddc858f31cce SHA1 620b205b2cddc55f63199267eeb30e9f4c6a817b SHA256 7cccbeab15ef93a962010750e32971ffff1226321adc83df7ff572dea8ff63c2
