@@ -1,0 +1,32 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libpano13/libpano13-2.9.14_rc1.ebuild,v 1.1 2009/05/03 10:01:53 maekke Exp $
+
+inherit eutils versionator java-pkg-opt-2
+
+DESCRIPTION="Helmut Dersch's panorama toolbox library"
+HOMEPAGE="http://panotools.sf.net"
+SRC_URI="mirror://sourceforge/panotools/${P}.tar.gz"
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
+IUSE="java"
+DEPEND="
+	media-libs/jpeg
+	media-libs/libpng
+	media-libs/tiff
+	sys-libs/zlib
+	java? ( virtual/jdk )"
+RDEPEND="${DEPEND}"
+
+S="${WORKDIR}/${PN}-$(get_version_component_range 1-3)"
+
+src_compile() {
+	econf $(use_with java java ${JAVA_HOME})
+	emake || die "Build failed"
+}
+
+src_install() {
+	make DESTDIR="${D}" install || die "Install failed"
+	dodoc README README.linux AUTHORS NEWS doc/*.txt
+}
