@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libpano13
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libpano13/ChangeLog,v 1.8 2009/04/20 20:59:25 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libpano13/ChangeLog,v 1.9 2009/05/03 10:01:53 maekke Exp $
+
+*libpano13-2.9.14_rc1 (03 May 2009)
+
+  03 May 2009; Markus Meier <maekke@gentoo.org>
+  +libpano13-2.9.14_rc1.ebuild:
+  version bump
 
   20 Apr 2009; Markus Meier <maekke@gentoo.org> libpano13-2.9.12,
   libpano13-2.9.14_beta1, libpano13-2.9.14_beta2:
